care-australia-uat/force-app/main/default/objects/Finance_Reporting__c/Finance_Reporting__c.object-meta.xml
<CustomObject>
    <description>This object will used to generate reports for finance team.
This object will track each transaction in salesforce which has impact on finance.</description>
    <label>Finance Reporting</label>
    <nameField>
        <displayFormat>FR-{0000}</displayFormat>
        <label>Finance Reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Reportings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>