care-australia-uat/force-app/main/default/objects/Finance_Reporting__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Finance Reportings</relationshipLabel>
    <relationshipName>Finance_Reportings</relationshipName>
    <type>Lookup</type>
</CustomField>