care-australia-uat/force-app/main/default/objects/Finance_Reporting__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Finance Reportings</relationshipLabel>
    <relationshipName>Finance_Reportings</relationshipName>
    <type>Lookup</type>
</CustomField>