care-australia-uat/force-app/main/default/objects/Finance_Reporting__c/fields/Credit_AC_Code__c.field-meta.xml
<CustomField>
    <fullName>Credit_AC_Code__c</fullName>
    <label>Credit AC Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>133030</fullName>
            </value>
            <value>
                <fullName>133032</fullName>
            </value>
            <value>
                <fullName>133034</fullName>
            </value>
            <value>
                <fullName>133035</fullName>
            </value>
            <value>
                <fullName>133038</fullName>
            </value>
            <value>
                <fullName>133039</fullName>
            </value>
            <value>
                <fullName>133040</fullName>
            </value>
            <value>
                <fullName>133044</fullName>
            </value>
            <value>
                <fullName>133046</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>