care-australia-uat/force-app/main/default/objects/Finance_Reporting__c/fields/Debit_AC_Code__c.field-meta.xml
<CustomField>
    <fullName>Debit_AC_Code__c</fullName>
    <label>Debit AC Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>400000</fullName>
            </value>
            <value>
                <fullName>400065</fullName>
            </value>
            <value>
                <fullName>400200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>