care-australia-uat/force-app/main/default/objects/Finance_Reporting__c/fields/Donation_Source__c.field-meta.xml
<CustomField>
    <fullName>Donation_Source__c</fullName>
    <formula>TEXT(Opportunity__r.Donation_Source__c)</formula>
    <label>Donation Source</label>
    <type>Text</type>
</CustomField>