care-australia-uat/force-app/main/default/objects/Finance_Reporting__c/fields/GAU__c.field-meta.xml
<CustomField>
    <fullName>GAU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GAU</label>
    <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
    <relationshipLabel>Finance Reportings</relationshipLabel>
    <relationshipName>Finance_Reportings</relationshipName>
    <type>Lookup</type>
</CustomField>