care-australia-uat/force-app/main/default/objects/Finance_Reporting__c/fields/GAU_Code__c.field-meta.xml
<CustomField>
    <fullName>GAU_Code__c</fullName>
    <formula>GAU__r.GAU_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GAU Code</label>
    <type>Text</type>
</CustomField>