care-australia-uat/force-app/main/default/objects/Finance_Reporting__c/fields/General_Accounting_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>General_Accounting_Unit_Name__c</fullName>
    <formula>GAU__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>General Accounting Unit Name</label>
    <type>Text</type>
</CustomField>