care-australia-uat/force-app/main/default/objects/Finance_Reporting__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Finance Reportings</relationshipLabel>
    <relationshipName>Finance_Reportings</relationshipName>
    <type>Lookup</type>
</CustomField>