care-australia-uat/force-app/main/default/objects/Finance_Reporting__c/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <formula>Opportunity__r.RecordType.DeveloperName</formula>
    <label>Opportunity Record Type</label>
    <type>Text</type>
</CustomField>