care-australia-uat/force-app/main/default/objects/Finance_Reporting__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>npe01__OppPayment__c</referenceTo>
    <relationshipLabel>Finance Reportings</relationshipLabel>
    <relationshipName>Finance_Reportings</relationshipName>
    <type>Lookup</type>
</CustomField>