care-australia-uat/force-app/main/default/objects/Finance_Reporting__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <formula>TEXT(Payment__r.npe01__Payment_Method__c)</formula>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>