care-australia-uat/force-app/main/default/objects/Finance_Reporting__c/fields/Payment_Ref_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Ref_Id__c</fullName>
    <formula>Opportunity__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Ref Id</label>
    <type>Text</type>
</CustomField>