care-australia-uat/force-app/main/default/objects/Finance_Reporting__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>