care-australia-uat/force-app/main/default/objects/Finance_Reporting__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>