care-australia-uat/force-app/main/default/objects/Finance_Reporting__c/fields/Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Number__c</fullName>
    <label>Transaction Number</label>
    <length>180</length>
    <type>Text</type>
</CustomField>