care-australia-uat/force-app/main/default/objects/Finance_Reporting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Transaction_Number__c</columns>
    <columns>Credit_AC_Code__c</columns>
    <columns>Debit_AC_Code__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>equals</operation>
        <value>braden timms</value>
    </filters>
    <label>All</label>
</ListView>